1998-02-01  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NSelect.m ([NSelect +select:from:into:]): Set a [0,1) 
	interval for random number generator.  Reformatting throughout.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ActionCache.m ([ActionCache -deliverActions]): For Stop
	call actionHolder if there isn't an activity.  Don't attempt
	reschedule if no _activity_current.

1998-01-27  Marcus G. Daniels  <mgd@grasshopper.santafe.edu>

	* global.h (initSwarm): Constify argv.
	* simtools.h: Likewise.
	* simtools.m (initSwarm): Likewise.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m: Include defobj.h.  Don't include stdio.h,
	simtools/global.h, or objc/objc-api.h.
	(_nameToObject): Remove; use nameToObject from defobj instead.

1998-01-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ClassDisplayWidget.m ([ClassDisplayWidget -createEnd]): Use
	setReliefFlag:.

	* SimpleProbeDisplay.m ([SimpleProbeDisplay -createEnd]): Likewise.

1998-01-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VarProbeWidget.m ([VarProbeWidget -createEnd]): Create
	myLabel from a VarProbeLabel instead of a Label; remove
	call to anchorEast.
	([VarProbeWidget -setParent:]): Don't define focus method
	in non-USE_WIDGET case.
	([VarProbeWidget -idReceive]): Call GUI_FOCUS instead of using
	now-nonexistent focus widget method.

	* VarProbeWidget.h (VarProbeWidget): Make myLabel conform
	to the VarProbeLabel instead of Label protocol.
	Remove declaration of focus method in non-USE_WIDGET case.

	* ClassDisplayWidget.m ([ClassDisplayWidget -createEnd]): Define
	widgetName and create a frame unless USE_FRAME.
	([ClassDisplayWidget -createEnd]): Disable relief.  Create myTitle
	from a ClassDisplayLabel instead of a Label; remove calls to
	anchorWest and colorBlue.
	([ClassDisplayWidget -setParent:], [ClassDisplayWidget
	-getWidgetName], [ClassDisplayWidget -pack]): Define versions unless
	USE_FRAME.
