@@ -1,3 +1,10 @@
+1998-02-02  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* simtools.m (initSwarm): Minor reformatting.
+
+	* NSelect.m ([NSelect +select:from:into:]): Use addLast instead of
+	put for target list.  Use raiseEvent to Error instead of fprintf.
+
 1998-02-01  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* NSelect.m ([NSelect +select:from:into:]): Set a [0,1) 
